[workspace]
members = [
    "rigid_body", 
    "integrator",
    "car", 
    "grid_terrain",
    "cameras",
    ]
resolver = "2"

[workspace.dependencies]
# bevy
bevy = "0.11.2"
bevy_obj = "0.11.0"


car = { path = "./car" }
data_viewer = { path = "./data_viewer" }
rigid_body = {path = "./rigid_body"}
bevy_integrator = { path = "./integrator" }
cameras = {  path = "./cameras" }

# physics
grid_terrain = { path = "./grid_terrain" }


itertools = "0.11.0"
nalgebra = "0.32.2"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
