[package]
name = "rigid_body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# external dependencies
nalgebra = {workspace = true}

# bevy specific external dependencies
bevy = {workspace = true}
bevy_obj = {workspace = true}

# internal dependencies
bevy_integrator = {workspace = true}
cameras = {workspace = true}
